--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=auth_server
 secret.key=${SECRET_KEY}
+redirect.url=${REDIRECT_URL}
+logout.url=${LOGOUT_URL}
 logging.level.org.springframework.security=DEBUG
