--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,12 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=auth_server
+
 secret.key=${SECRET_KEY}
-redirect.url=${REDIRECT_URL}
-logout.url=${LOGOUT_URL}
+redirect.url=${REDIRECT_URI}
+logout.url=${LOGOUT_URI}
+
 logging.level.org.springframework.security=DEBUG
+
+flyway.schemas=auth_server
+flyway.table=flyway_schema_history_auth-server
