--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,33 +4,44 @@ spring:
 
   datasource:
     url: ${DB_URL}
-    username: ${DB_USER}
+    username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
+    show-sql: true
+    open-in-view: false
     properties:
       hibernate:
+        format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
 
 server:
   port: ${PORT}
 
-secret:
-  key: ${SECRET_KEY}
-
-redirect:
-  url: ${REDIRECT_URI}
-
 logout:
   url: ${LOGOUT_URI}
 
+oauth2:
+  clientId: ${CLIENT_ID}
+  clientSecret: ${SECRET_KEY}
+  tokenUri: ${TOKEN_URI}
+  authorizationUri: https://authorization-server.com/oauth2/authorize
+  redirectUri: ${REDIRECT_URI}
+
+
 logging:
   level:
-    org:
-      springframework:
-        security: DEBUG
+    com.fasterxml.jackson: DEBUG
+    com.fasterxml.jackson.databind: DEBUG
+
+    org.springframework.security.oauth2: DEBUG
+    org.springframework.security.oauth2.server.authorization: DEBUG
+
+    org.springframework.jdbc.core: DEBUG
+    org.springframework.jdbc.core.JdbcTemplate: DEBUG
 
 flyway:
-  schemas: auth_server
+  schemas: auth-server
   table: flyway_schema_history_auth-server
